Project

General

Profile

Actions

Bug #18244

closed

librbd::ResizeRequest: failed to update image header: (16) Device or resource busy

Added by Mykola Golub over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel,kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

From Jason:

The operations that use "assert_header_locked" should be modified to handle EBUSY and retry - or just yank those header asserts since
they really aren't protecting against any real case (stolen locks would result in the client being blacklisted and orderly lock transitions wait for all in-flight ops to complete before releasing the lock).


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #18321: jewel: librbd::ResizeRequest: failed to update image header: (16) Device or resource busyResolvedAlexey SheplyakovActions
Copied to rbd - Backport #18322: kraken: librbd::ResizeRequest: failed to update image header: (16) Device or resource busyClosedActions
Actions #1

Updated by Mykola Golub over 7 years ago

http://qa-proxy.ceph.com/teuthology/trociny-2016-12-12_21:20:55-rbd-wip-mgolub-testing---basic-vps/628603/

2016-12-12T23:18:26.536 INFO:teuthology.orchestra.run.vpm165.stdout:rbd_resize(170901232) failed
2016-12-12T23:18:26.536 INFO:teuthology.orchestra.run.vpm165.stdout:dowrite: ops->resize: Device or resource busy

2016-12-12 23:18:26.464075 7f39ee7fc700 -1 librbd::ImageWatcher: 0x7f39e0029f90 image watch failed: 139886556474112, (107) Transport endpoint is not connected
2016-12-12 23:18:26.514757 7f39ee7fc700 -1 librbd::ResizeRequest: failed to update image header: (16) Device or resource busy

Actions #2

Updated by Jason Dillaman over 7 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #3

Updated by Jason Dillaman over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18321: jewel: librbd::ResizeRequest: failed to update image header: (16) Device or resource busy added
Actions #6

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18322: kraken: librbd::ResizeRequest: failed to update image header: (16) Device or resource busy added
Actions #7

Updated by Jason Dillaman over 7 years ago

  • Backport changed from jewel, kraken to jewel
Actions #8

Updated by Nathan Cutler over 7 years ago

  • Backport changed from jewel to jewel,kraken
Actions #9

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF