librbd: remove image header lock assertions

This assertions can sporadically fail if the watch is lost and
recovered in the background. Upon a true loss of the lock, the
client would either be blacklisted or it would have completed
all in-flight ops before releasing.

Fixes: http://tracker.ceph.com/issues/18244
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit ce4f2a52ec0a794d89e7576b59c9b9aefe3db288)

Conflicts:
    src/librbd/ExclusiveLock.cc (different argument to
        rados::cls::lock::assert_locked() inside assert_header_locked template
        - master has m_cookie whereas jewel has encode_lock_cookie() -
        but this difference is academic because the entire template is being
        dropped)
    src/librbd/operation/SnapshotCreateRequest.cc (master version of
       cls_client::snapshot_add() function call has one additional argument
       compared to jewel, but this is irrelevant to the substance
       of the PR - chose the jewel version)